--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-
-
-
+	<style type="text/css">
+		.header{
+			height: 100px ;
+			width : 100%;
+			background-color: cyan;
+			float: left;
+		}
+	</style>
 </head>
-
 <body>
-
-
-
-
-<body>
-
+	<div class='header'>
+		
+	</div>
+</body>
 </html>
