--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><title>Student management portal</title>
 	<style type="text/css">
 		.header{
 			height: 100px ;
