--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <input type="button" name="" value="shilpa"/>
 	<div class='header'>
 		Username:<input type ="text" id="inp1">
+		Username:<input type ="text" id="inp1">
+		Username:<input type ="text" id="inp1">
 
 		<h2>Ankit</h2>		
 	</div>
